--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@
 
 * { 
     padding: 0; margin: 0;
-    /* outline: 1px solid red !important; */
+    /*  outline: 1px solid red !important; */
 }
+
 
 body {
     background-color: rgb(16, 16, 16);
 }
+
 
 .navbar-container {
     display: flex;
@@ -32,6 +34,7 @@ body {
 
 .navbar-items {
     display: flex;
+    position: absolute;
     flex-direction: row;
     justify-content: space-between;
     font-family: Navbar-Font, sans-serif;
@@ -61,25 +64,39 @@ body {
     transition: all 100ms ease;
 }
 
-.aboutme-container {
-    position: relative;
-    left: 10rem;
-    top: 9rem;
-    
+.profile-container {
     display: flex;
+    position: relative;
+    flex-wrap: row wrap;
+    left: 13rem;
+    top: 9rem;
     float: left;
 
 }
 
-.aboutme-img img{
+.profile-img img{
     border-radius: 30rem;
     box-shadow: 0 0 5px #fff,
     0 0 10px #368dffdd,
     0 0 15px #2382ffdd,
     0 0 25px #006effdd;
+    transition: all 500ms ease;
+
+
+}
+.profile-img img:hover {
+
+    transform: scale(1.05);
+    transition: all 500ms ease;
+    box-shadow: 0 0 10px #fff,
+    0 0 20px #368dffdd,
+    0 0 35px #2382ffdd,
+    0 0 45px #006effdd;
+
+
 }
 
-.aboutme-text {
+.profile-text {
     color: #2382ffdd;
     max-width: 46ch;
     margin-left: 3rem;
@@ -87,20 +104,24 @@ body {
     font-family: Navbar-Font, sans-serif; 
     margin-top: 1.5rem;
 }
-.aboutme-text p{
+.profile-text p{
     text-align: start;
     color: #FFFFFF;
     margin-left: 10px;
+    filter: drop-shadow(1px 0 0 #006effdd) 
+    drop-shadow(0 1px 1px #006effdd)
+    drop-shadow(-1px 0 1px #006effdd) 
+    drop-shadow(0 -1px 1px #006effdd);
 }
-.aboutme-text h1 {
+.profile-text h1 {
     text-shadow: 0 0 3px #787878;
 }
  
-.aboutme-text p:nth-child(3) {
+.profile-text p:nth-child(3) {
     margin-top: 1.5rem;
 }
 
-.aboutme-text i {
+.profile-text i {
     color: #2382ffdd;
     font-size: 2rem;
     float: left;
@@ -110,40 +131,158 @@ body {
     cursor: pointer;
 }
 
-.skills{
-    width: 100%; 
+.skills-text{
     position: relative;
-    top: 27rem;
-    color:#2382ffdd;
-    font-family: Navbar-Font, sans-serif; 
+
+    filter: drop-shadow(0px 0 0 #ffffffdd) 
+    drop-shadow(0 0px 0px #ffffffdd)
+    drop-shadow(0px 0 0px #ffffffdd) 
+    drop-shadow(0 0px 0px #ffffffdd);
 }
 
+.skills{
+    width: 100%; 
+    text-align: center;
+    position: absolute;
+    top: 29rem;
+    color:#2382ffdd;
+    font-size: 2rem;
+    font-family: Navbar-Font, sans-serif; 
+    text-shadow: 0 0 2px #787878;
+
+}
+
+.skills:before {
+    content: "";
+    display: flex;
+    position: absolute;
+    height: 0.2rem;
+    width: 200px;
+    top: 50%;
+    left: 25rem;
+    background-color: #006effdd;
+    box-shadow: 0 0 2px #787878;
+}
+
+.skills:after {
+    content: "";
+    display: flex;
+    position: absolute;
+    height: 0.2rem;
+    width: 200px;
+    top: 50%;
+    right: 25rem;
+    background-color: #006effdd;
+    box-shadow: 0 0 2px #787878;
+}
+
+
+@keyframes tilt-shaking {
+    0% { transform: rotate(0deg); }
+    25% { transform: rotate(5deg); }
+    50% { transform: rotate(0eg); }
+    75% { transform: rotate(-5deg); }
+    100% { transform: rotate(0deg); }
+}
 
 .skills-logo-container {
     display: flex;
     flex-flow: row wrap;
     position: relative;
     width: 70%;
+    height: max-content;
     justify-content: space-around;
     margin: 0 auto;
-    top: 14rem;
+    top: 19rem;
+    font-family: Navbar-Font, sans-serif; 
 
 }
 
 .skills-logo-container div img {
     width: 100px;
     height: 100px;
+    transition: all 100ms ease;
 }
 
 .skills-logo-container div h3 {
     text-align: center;
     display: none;
+
+    
     
 }
 
-.skills-logo-container div:hover .h3 {
-    display: flex;
+.skills-logo-container div:hover h3 {
+    text-align: center;
     color: #006effdd;
+    text-shadow: 0 0 1px #000000;
+    display: block;
+    position: absolute;
+    
 }
+
+
+.skills-logo-container div img:hover  {
+    transform: scale(1.1);
+    filter: drop-shadow(1px 0 0 #006effdd) 
+            drop-shadow(0 1px 1px #006effdd)
+            drop-shadow(-1px 0 1px #006effdd) 
+            drop-shadow(0 -1px 1px #006effdd);
+    transition: all 100ms ease;
+    animation: tilt-shaking .25s infinite;
+}
+
+.aboutme-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    margin: 0 auto;
+    position: relative;
+    top: 24rem ;
+    width: 70%;
+    height: fit-content;
+
+}
+
+.aboutme-container img {
+    width: 250px;
+    height: 250px;
+    margin-left: 70%;
+    filter: drop-shadow(1px 0 0 #006effdd) 
+    drop-shadow(0 1px 1px #006effdd)
+    drop-shadow(-1px 0 1px #006effdd) 
+    drop-shadow(0 -1px 1px #006effdd);
+}
+
+.aboutme-text {
+    color: #006effdd;
+    float: left;
+    position: absolute;
+    margin-right: 20rem;
+    line-height: 1.6rem;
+    font-family: Navbar-Font, sans-serif; 
+    margin-top: 3rem;
+    
+}
+
+.aboutme-text p {
+
+    margin-top: 1rem;
+    color: white;
+    filter: drop-shadow(1px 0 0 #006effdd) 
+    drop-shadow(0 1px 1px #006effdd)
+    drop-shadow(-1px 0 1px #006effdd) 
+    drop-shadow(0 -1px 1px #006effdd);
+
+}
+
+
+.aboutme-text h1 {
+    text-shadow: 0 0 3px #959595;
+}
+    
+
+
+
 
 
