--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ body {
     background-color: rgb(16, 16, 16);
 }
 
+#aboutme {
+    scroll-behavior: smooth;
+    text-decoration: none;
+    color: #006effdd;
+
+
+}
+
 
 .navbar-container {
     display: flex;
@@ -133,7 +141,7 @@ body {
 
 .skills-text{
     position: relative;
-
+    top: 3rem;
     filter: drop-shadow(0px 0 0 #ffffffdd) 
     drop-shadow(0 0px 0px #ffffffdd)
     drop-shadow(0px 0 0px #ffffffdd) 
@@ -190,7 +198,7 @@ body {
     flex-flow: row wrap;
     position: relative;
     width: 70%;
-    height: max-content;
+    height: 200px;
     justify-content: space-around;
     margin: 0 auto;
     top: 19rem;
