--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 
 * { 
     padding: 0; margin: 0;
+    font-family: Navbar-Font, sans-serif; 
     /*  outline: 1px solid red !important; */
 }
 
@@ -27,12 +28,12 @@ body {
     display: flex;
     position: fixed;
     float: right;
-    height: 3.4rem;
+    height: 4rem;
     z-index: 10;
     left: auto; 
     width: 100%;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
     background-color: rgb(16, 16, 16);
     border-bottom-color: rgba(23, 23, 23,0.2);
     
@@ -76,9 +77,9 @@ body {
     display: flex;
     position: relative;
     flex-wrap: row wrap;
-    left: 13rem;
-    top: 9rem;
-    float: left;
+    width: 90%;
+    justify-content: center;
+    top: 10rem;
 
 }
 
@@ -89,6 +90,9 @@ body {
     0 0 15px #2382ffdd,
     0 0 25px #006effdd;
     transition: all 500ms ease;
+    object-fit: cover;
+    margin-left: 5rem;
+    
 
 
 }
@@ -107,7 +111,9 @@ body {
 .profile-text {
     color: #2382ffdd;
     max-width: 46ch;
-    margin-left: 3rem;
+    min-width: 29ch;
+    margin-left: 1.5rem;
+    margin-right: 1rem;
     text-align: center;
     font-family: Navbar-Font, sans-serif; 
     margin-top: 1.5rem;
@@ -141,49 +147,24 @@ body {
 
 .skills-text{
     position: relative;
-    top: 3rem;
     filter: drop-shadow(0px 0 0 #ffffffdd) 
     drop-shadow(0 0px 0px #ffffffdd)
     drop-shadow(0px 0 0px #ffffffdd) 
     drop-shadow(0 0px 0px #ffffffdd);
+    justify-content: center;
 }
 
 .skills{
     width: 100%; 
     text-align: center;
     position: absolute;
-    top: 29rem;
     color:#2382ffdd;
     font-size: 2rem;
     font-family: Navbar-Font, sans-serif; 
     text-shadow: 0 0 2px #787878;
+    top: 13rem;
 
 }
-
-.skills:before {
-    content: "";
-    display: flex;
-    position: absolute;
-    height: 0.2rem;
-    width: 200px;
-    top: 50%;
-    left: 25rem;
-    background-color: #006effdd;
-    box-shadow: 0 0 2px #787878;
-}
-
-.skills:after {
-    content: "";
-    display: flex;
-    position: absolute;
-    height: 0.2rem;
-    width: 200px;
-    top: 50%;
-    right: 25rem;
-    background-color: #006effdd;
-    box-shadow: 0 0 2px #787878;
-}
-
 
 @keyframes tilt-shaking {
     0% { transform: rotate(0deg); }
@@ -198,11 +179,11 @@ body {
     flex-flow: row wrap;
     position: relative;
     width: 70%;
-    height: 200px;
     justify-content: space-around;
     margin: 0 auto;
     top: 19rem;
     font-family: Navbar-Font, sans-serif; 
+    gap: 1.5rem;
 
 }
 
@@ -242,19 +223,17 @@ body {
 
 .aboutme-container {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 0 auto;
     position: relative;
-    top: 24rem ;
+    margin-top: 24rem ;
     width: 70%;
-    height: fit-content;
 
 }
 
 .aboutme-container img {
-    width: 250px;
-    height: 250px;
+    width: 10em;
     margin-left: 70%;
     filter: drop-shadow(1px 0 0 #006effdd) 
     drop-shadow(0 1px 1px #006effdd)
@@ -266,10 +245,12 @@ body {
     color: #006effdd;
     float: left;
     position: absolute;
-    margin-right: 20rem;
+    margin-right: 3rem;
     line-height: 1.6rem;
     font-family: Navbar-Font, sans-serif; 
-    margin-top: 3rem;
+    margin-bottom: 2rem;
+    min-width: 25ch;
+    max-width: 70ch;
     
 }
 
@@ -288,9 +269,183 @@ body {
 .aboutme-text h1 {
     text-shadow: 0 0 3px #959595;
 }
+
+.slider {
+    position: relative;
+    width: 800px;
+    margin: 150px auto;
+}
+
+.slider .slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.slider .slide img {
+    position: absolute;
+    border-radius: 2rem;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
+.slider .slide .info {
+    position: absolute;
+    z-index: 1;
+    top: 2rem;
+    left: 2rem;
+    margin-left: 30px;
+    margin-right: 15rem;
+    background-color: rgba(255, 255, 255, 0.035);
+    padding: 1rem;
+    border-radius: .2rem;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.191);
+}
+
+.slider .navigation{
+    display: flex;
+    height: 500px;
+    align-items: center;
+    justify-content: space-between;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.slider:hover .navigation {
+    opacity: 1;
+}
+
+.prev-btn, .next-btn {
+    z-index: 10;
+    font-size: 2rem;
+    color: white;
+    cursor: pointer;
+    filter: drop-shadow(1px 0 0 #006effdd) 
+    drop-shadow(0 1px 1px #006effdd)
+    drop-shadow(-1px 0 1px #006effdd) 
+    drop-shadow(0 -1px 1px #006effdd);
+}
+
+.navigation-button{
+    display: flex;
+    z-index: 999;
+    justify-content: center;
+}
+
+.navigation-button .btn-icon{
+    z-index: 999;
+    width: 13px;
+    height: 10px;
+    background: rgba(238, 238, 238, 0.5);
+    margin: 0 6px;
+    border-radius: 20rem;
+
+}
+
+@media (max-width: 900px) {
+    .slider {
+        width: 80%;
+    }
+
+    .slider .slide .info {
+        position: relative;
+        z-index: 1;
+        width: 80%;
+        top: 2rem;
+        background-color: rgba(255, 255, 255, 0.035);
+        padding: 1rem;
+        border-radius: .2rem;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.191);
+    }
+
+}
     
+@media (max-width: 600px) {
+
+    .slider{
+        position: relative;
+        width: 80%;
+
+    }
+
+    .slider .slide .info {
+        position: relative;
+        z-index: 1;
+        width: 60%;
+        top: 2rem;
+        font-size: .75rem;
+        background-color: rgba(255, 255, 255, 0.035);
+        padding: 1rem;
+        border-radius: .2rem;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.191);
+    } 
+
+    .aboutme-container {
+        margin-left: 4rem;
+        }
+    
+    .aboutme-text {
+        max-width: 40ch;
+        }
+
+}
+
+
+@media (max-width: 970px) {
+
+    .navbar-container {
+        justify-content: center;
+        width: 100%;
+        align-items: center;
+    }
+
+    .navbar-items {
+        width: 70vw;
+    }
+}
+
+
+@media (max-width: 800px) {
+
+    .aboutme-container {
+    margin-left: 4rem;
+    }
+
+    .aboutme-text {
+        max-width: 50ch;
+    }
+
+}
 
 
 
+/*.navbar-container {
+    display: flex;
+    position: fixed;
+    float: right;
+    height: 4rem;
+    z-index: 10;
+    left: auto; 
+    width: 100%;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: rgb(16, 16, 16);
+    border-bottom-color: rgba(23, 23, 23,0.2);
+    
+    border-style: solid;
+    
+}
+
+.navbar-items {
+    display: flex;
+    position: absolute;
+    flex-direction: row;
+    justify-content: space-between;
+    font-family: Navbar-Font, sans-serif;
+    font-size: 0.55rem;
+    color: #FFFFFFFF;
+    width: 33%;
+    margin-right: 2rem;*/
 
 
